libya_tally/apps/tally/static/css/default.css
@import url("fonts-open-sans.css");

table#login_table {
    margin: 150px auto;
}

body {
    font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size:14px!important;
    line-height: 1.42857143;
    color: #222222;
    background-color: #E3EAF0;
}

.large input[type=text], select{
	border:1px solid #222222!important;
	min-width:20em;
}

table.mid tr td{
	vertical-align:middle!important;
}

table.vert tr td{
	vertical-align:text-top!important;
}

span.bignum{}

.hnec-logo{
	margin-left:1em;
}

.pinksd{
	background:#F8ABAD;
}
.greysd{
	background:#D1D3D4;
}
.bluesd{
	background:#AFCCE5;
}

form{
	padding:.5em;
}
.righter{
	float:right!important;
}
.container{
	padding:.3em;
}

.top-header{
    background-color: #ffffff;
	border-bottom:1px solid #CFCFCF;
	padding-bottom:.7em;
	padding-left:1.2em;
	padding-right:1.2em;
}
.main-container {
    background-color: #ffffff;
    padding:1em;
	max-width:1000px;
}
.locales{
	font-size:.9em;
}
.grid2{
	width:48%;
	float:left;
}
.col-md-2.col-sm-1.grid2{
	padding:0;
}
.infotable{
	width:45%;
}

.border-top{
	border-top:1px dashed #DFDFDF;
	margin-top:1em;
	padding-top:.6em;
}
.blue-bg{
	background:#AFCCE5;
}
.gray-bg{
	background:#D1D3D4;
	border:1px solid #808080;
	min-height:4em;
	padding:.4em;
	text-align:center;
	vertical-align:middle!important;
}

.warn {
    background-color: #f2dede!important;
    color: #a94442;
    border: solid 2px #ebccd1!important;
    font-weight: bold;
}
td.thick-border-right {
    border-right: solid 2px #666666!important;
}
td.thick-border-left {
    border-left: solid 2px #666666!important;
}

h1.headertxt{
	border-bottom:1px solid #CFCFCF;
	font-weight:bold;
	font-size:2em;
	margin-bottom:1em;
	padding-bottom:1em;
}

.underline {
    border-bottom: 1px solid #CFCFCF;

}

h4.headertxt{
	color:#F67225;
	font-size:1.5em;
}
.formtable tr td{
	padding:.6em;
}
.formtable label{
	display:block;
	font-weight:bold;
	text-align:right;
}

.navbar {
    margin-bottom: 20px;
}
h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
    font-family: "Open Sans","Helvetica Neue", Helvetica, Arial, sans-serif;
    font-weight: 500;
    line-height: 1.1;
}


label {
    display: inline-block;
    margin-bottom: 5px;
    font-weight: 300;
    margin-right: 15px;
}

.form-instructions {
    color:#F67225;
    font-size:1.5em;
    font-weight:bold;
}
footer{
	font-size:0.9em;
	margin-top:5em;
}

.errorlist{
    color: red;
}

.print-section h2{
}

table.print-table{
    width: 100%;
    border: 2px solid black;
}

table.print-table td {
    padding: 10px;
}
table.print-table td h4 {
    margin-top: 0;
}

